fix: rewrite api and changed openapi documentation
